<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_save"
          android:icon="@drawable/ic_menu_save"
          android:alphabeticShortcut='s'
          android:title="@string/menu_save"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_revert"
          android:icon="@drawable/ic_menu_revert"
          android:title="@string/menu_revert" />
    <item android:id="@+id/menu_delete"
          android:icon="@drawable/ic_menu_delete"
          android:title="@string/menu_delete"
          android:showAsAction="ifRoom|withText" />
    <item android:title="@string/changecolor">
        <menu>
            <item android:title="@string/changebackcolor"
                android:id="@+id/backgroundcolor"></item>
            <item android:title="@string/changetextcolor"
                android:id="@+id/textcolor"></item>
        </menu>
    </item>
    <item android:title="@string/setalert">
        <menu>
            <item android:title="@string/choicedate"
                android:id="@+id/set_date"></item>
            <item android:title="@string/choicetime"
                android:id="@+id/set_time"></item>
        </menu>
    </item>
</menu>